# finagg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: build-docs.yml  lint.yml  python-package.yml  test-and-publish.yml  test.yml  testenvs.yml  tox-tests.yml  typecheck.yml
docs/: Makefile  assumptions.rst  cli.rst  conf.py  configuration.rst  conventions.rst  faq.rst  index.rst  installation.rst  references.rst  release_notes.rst  requirements.txt  walkthroughs.rst
docs/api/: finagg.bea.rst  finagg.fred.api.rst  finagg.fred.feat.rst  finagg.fundam.rst  finagg.rst  finagg.sec.rst  modules.rst
docs/findata/: http_cache.sqlite
src/finagg/: __init__.py  __main__.py  _version.py  backend.py  config.py  feat.py  frame.py  install.py  portfolio.py  ratelimit.py  taggable.py  testing.py  utils.py
src/finagg/bea/: __init__.py  _cli.py  api.py  sql.py
src/finagg/cuda/: portfolio.py
src/finagg/cuda/algo/: batch.py  dist.py  model.py  policy.py  view.py  worker.py
src/finagg/cuda/algos/: worker.py
src/finagg/envs/: __init__.py
src/finagg/envs/microtrader/: __init__.py  gym.py
src/finagg/envs/microtrader/wrappers/: __init__.py  actor.py  informer.py  observer.py  rewarder.py  stopper.py
src/finagg/fred/: __init__.py  _cli.py  feat.py  features.py  install.py  scrape.py  sql.py  store.py
src/finagg/fred/api/: __init__.py  _api.py  _category.py  _release.py  _series.py  _source.py  _tags.py  category.py  category_.py  release.py  release_.py  series.py  series_.py  source.py  source_.py  tags.py  tags_.py
src/finagg/fred/feat/: __init__.py  _raw.py  _refined.py  refined.py
src/finagg/fundam/: __init__.py  _cli.py  feat.py  features.py  install.py  sql.py  store.py
src/finagg/fundamentals/: __init__.py  features.py  install.py  store.py
src/finagg/indices/: __init__.py  _cli.py  api.py  install.py  scrape.py  sql.py
src/finagg/mixed/: __init__.py  _cli.py  features.py  install.py  store.py
src/finagg/sec/: __init__.py  _cli.py  api.py  feat.py  features.py  install.py  scrape.py  sql.py  store.py
src/finagg/sec/feat/: __init__.py  _raw.py
src/finagg/sec/feat/_refined/: __init__.py  annual.py  quarterly.py
src/finagg/sec/feat/refined/: __init__.py  annual_.py  quarterly_.py
src/finagg/torch/: portfolio.py  specs.py
src/finagg/torch/algo/: __init__.py  algorithm.py  batch.py  config.py  data.py  dist.py  env.py  model.py  policy.py  scheduler.py  view.py
src/finagg/torch/nn/: __init__.py  functional.py
src/finagg/torch/nn/modules/: __init__.py  activations.py  attention.py  embeddings.py  mlp.py  module.py  perceiver.py  skip.py
src/finagg/torch/optim/: __init__.py
src/finagg/torch/optim/dadaptation/: __init__.py  adagrad.py  adam.py  sgd.py
src/finagg/yfinance/: __init__.py  _cli.py  api.py  feat.py  features.py  install.py  scrape.py  sql.py  store.py
src/finagg/yfinance/feat/: __init__.py  _raw.py  _refined.py  raw.py  refined.py
src/shark/: __init__.py  __main__.py  _version.py  backend.py  bea.py  frame.py  install.py  portfolio.py  ratelimit.py  testing.py  utils.py
src/shark/bea/: __init__.py  api.py  sql.py
src/shark/eng/: __init__.py  features.py  sql.py
src/shark/fred/: __init__.py  features.py  install.py  scrape.py  sql.py  store.py
src/shark/fred/api/: __init__.py  _api.py  category.py  release.py  series.py  source.py  tags.py
src/shark/indices/: __init__.py  api.py  install.py  scrape.py  sql.py
src/shark/mixed/: __init__.py  features.py  sql.py  store.py
src/shark/sec/: __init__.py  api.py  features.py  install.py  scrape.py  sql.py  store.py
src/shark/tickers/: __init__.py  api.py  install.py  scrape.py  sql.py
src/shark/yfinance/: __init__.py  api.py  features.py  install.py  scrape.py  sql.py  store.py
tests/: test_frame.py  test_portfolio.py  test_ratelimit.py  test_utils.py
tests/test_bea/: test_api.py
tests/test_cuda/test_algo/: test_view.py
tests/test_fred/: test_api.py  test_feat.py  test_features.py  test_scrape.py
tests/test_fundam/: test_feat.py
tests/test_fundamentals/: test_features.py
tests/test_indices/: test_api.py  test_scrape.py
tests/test_mixed/: test_features.py
tests/test_sec/: test_api.py  test_feat.py  test_features.py  test_scrape.py  test_sql.py
tests/test_tickers/: test_api.py  test_scrape.py
tests/test_torch/test_algo/: test_view.py
tests/test_yfinance/: test_api.py  test_feat.py  test_features.py  test_scrape.py  test_sql.py
