[metadata]
name = finagg

[options]
package_dir =
    =src
packages = find:
install_requires =
    beautifulsoup4
    click
    pandas
    pandas-stubs
    python-dotenv
    requests
    requests-cache
    SQLAlchemy
    tqdm
    types-requests
    yfinance
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options.entry_points]
console_scripts =
    finagg = finagg.__main__:main

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest
    tox
    versioneer
learning =
    gym==0.25.*
    pydantic
    torchrl

[options.packages.find]
where = src

[isort]
profile = black
src_paths =
    setup.py
    src
    tests

[mypy]
strict = True
ignore_missing_imports = True
implicit_reexport = True
no_implicit_optional = True
show_error_codes = True
exclude =
    (?x)(
        _version.py
        | versioneer.py
    )

[tox:tox]
envlist = py310

[testenv]
usedevelop = True
deps = pytest
commands = pytest {posargs}

[testenv:lint]
deps = pre-commit
commands =
    pre-commit run --all-files

[testenv:type]
deps = mypy
commands =
    mypy src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/finagg/_version.py
versionfile_build = finagg/_version.py
tag_prefix = ""
parentdir_prefix = finagg-
